k8s/automation-allow-keeping-law-simple-stt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-keeping-law-simple-wyoming-transcription
  namespace: automation
spec:
  podSelector:
    matchLabels:
      app: automation-stt-gpu1-router
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keeping-law-simple
          podSelector:
            matchLabels:
              app.kubernetes.io/name: keeping-law-simple
            matchExpressions:
              - key: app.kubernetes.io/component
                operator: In
                values:
                  - wyoming-transcriptions
      ports:
        - protocol: TCP
          port: 8000
